Webpage HTML and CSS updated and first JS function

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <div class="dx-container">
                 <h1>Il tuo nome</h1>
                 <div class="PL-Choice">
-                    <h3>Choice</h3>
+                    <div class="choice-square" id="player-choice"></div>
                 </div>
             </div>
             <div class="ctr-container">
@@ -22,13 +22,12 @@
             <div class="sx-container">
                 <h1>Il Computer</h1>
                 <div class="PC-Choice">
-                    <h3>Choice</h3>
+                    <div class="choice-square" id="computer-choice"></div>
                 </div>
             </div>
         </div>
         <div class="bottom-container">
             <div class="pl-points">
-                <h2>I punteggi del player</h2>
                 <div class="pl-point-circle-grid">
                     <div class="circle">X</div>
                     <div class="circle">O</div>
@@ -36,15 +35,13 @@
                 </div>
             </div>
             <div class="btn-container"> 
-                <h2>I bottoni</h2>
                 <div class="btn-grid">
-                    <button>🪨</button>
-                    <button>✂️</button>
-                    <button>📄</button>
+                    <button class="rock" type="button" aria-label="Rock"></button>
+                    <button class="scissors" type="button" aria-label="Scissors"></button>
+                    <button class="paper" type="button" aria-label="Paper"></button>                  
                 </div>
             </div>
             <div class="pc-points">
-                <h2>I punteggi del pc</h2>
                 <div class="pc-point-circle-grid">
                     <div class="circle">X</div>
                     <div class="circle">O</div>
